# simple-chess

./: .gitignore  .settings  CMakeLists.txt  README.md
debug/: CMakeCache.txt  GUI.cbp  Makefile  cmake_install.cmake
debug/.cmake/api/v1/reply/: cache-v2-1b52cfd0ba88d0a0a457.json  cmakeFiles-v1-10d8ad467aafa2e45cd0.json  codemodel-v2-0216b6bcd09f0385efca.json  index-2021-12-04T20-10-53-0666.json  target-GUI-Debug-b50bcbc159aefe17d6ef.json
src/: Promotion.h  button.cpp  button.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp  main.cpp  menu.cpp  menu.hpp  message.cpp  message.hpp  promotion.cpp  promotion.hpp  settings.cpp  settings.hpp
